welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if Buggle 1 estFaceMur() {
   ^Program:12: error: illegal start of simple expression
	}
        ^