welcome.lessons.welcome.conditions.Conditions.scala.code
if Buggle 1 estFaceMur() {
gauche()
gauche()
avance()
droite()
droite();
} else {
avance();
}